# mq

./: .env.example  .gitignore  Cargo.toml  readme.md
migrations/: 20240218035836_init.sql  20240218181639_init.down.sql  20240218181639_init.up.sql  20240225005747_new_columns.down.sql  20240225005747_new_columns.up.sql
src/: main.rs
src/dao/: dev.rs  journal.rs  projects.rs
src/db/: config.rs
src/handlers/: dev.rs  journal.rs  mod.rs  projects.rs
src/models/: dev.rs  dev_journal.rs  journal.rs  mod.rs  projects.rs
src/routes/: dev.rs  journal.rs  projects.rs
src/services/: dev.rs  journal.rs  mod.rs  projects.rs
