[package]
name = "mq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
rustfmt = "0.10.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
sqlx = { version = "0.7.3", features = ["chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

